Changes since version 2.1.2
---------------------------

- Fixed a bug in the slice2cs code generator: if an operation
  had a parameter named i or szx, incorrect code was generated
  in some cases.

- Fixed a bug in proxyToString() for bidirectional proxies.

- Added ice_communicator() to proxies. This function returns
  the communicator that was used to create the proxy.

- Added ice_toString() to proxies. This function returns
  the stringified proxy. This function can be more convenient
  to use than communicator.stringToProxy() because you do
  not need the communicator to stringify a proxy that way.

- Parsing a stringified proxy no longer completely fails if the proxy
  contains an endpoint type which is unknown to the Ice runtime as long
  as the proxy contains other endpoints which are known. A warning is
  printed for the unknown types that are encountered.

- Ice.ObjectImpl is now an abstract class that cannot be instantiated.
  This change should be transparent to application code.

Changes since version 2.1.1
---------------------------

- Fixed a bug with dynamic thread pools, where new threads were
  destroyed immediately after dispatch if <threadpool>.Size=1 and
  <threadpool>.SizeMax > 1.

- Added the configuration property Ice.Compression.Level to provide
  more control over the bzip2 algorithm used to compress Ice protocol
  messages.

- Fixed a bug in the code generator: incorrect code was generated
  if an operation used an exception from an unrelated module in
  its exception specification.

- Added constructors to for structures and classes to C# mapping to
  allow structures and classes to be created and initialized in
  a single statement.

Changes since version 2.1.0
---------------------------

- Modified the Ice marshaling engine so that references to Ice objects
  are released as soon as possible.

- Fixed a race condition in the Ice run time that could cause a
  NullPointerException during process shutdown on machines with