@@ -1,6 +1,10 @@
 Changes since version 2.1.2
 ---------------------------
 
+- Fixed a bug in the slice2vb code generator: for sequences of
+  Slice structs that used the class mapping, the generated code
+  caused a run-time error.
+
 - Fixed a bug in the slice2vb code generator: if an operation
   had a parameter named ix or spx, incorrect code was generated
   in some cases.
